gitops-lab-appset/apps/bgd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bgd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bgd
  template:
    metadata:
      labels:
        app: bgd
    spec:
      containers:
        - name: bgd
          image: quay.io/rhdevelopers/bgd:latest
          ports:
            - containerPort: 8080
