gitops-lab-appset/apps/bgd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bgd
spec:
  selector:
    app: bgd
  ports:
    - port: 8080
      targetPort: 8080
