gitops-lab-appset/apps/bgd/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bgd
spec:
  to:
    kind: Service
    name: bgd
  port:
    targetPort: 8080
